--- a/starter-code/apps/scss/_globals.scss
+++ b/starter-code/apps/scss/_globals.scss
@@ -20,10 +20,52 @@ body {
     position: relative;
     padding: 1.5rem 1.5rem;
 
-    .header-list {
+    .hamburguer-btn {
+
+        > span {
+            display: block;
+            width: 24px;
+            height: 2px;
+            background-color: #D0D6F9;
+            transform-origin: 2px 1px;
+            transition: all 300ms ease-in-out;
+
+            &:not(last-child) {
+                margin-bottom: 5px;
+            }
+        }
+
+        &.open {
+        
+            > span:first-child {
+                transform: rotate(45deg);
+            }
+    
+            > span:nth-child(2) {
+                opacity: 0;
+            }
+    
+            > span:last-child {
+                transform: rotate(-45deg);
+            }
+    
+        }
+
+    }
+
+    &-list {
+        z-index: 1;
+        display: flex;
+        flex-direction: column;
         position: absolute;
-        left: 500;
-        overflow-x: hidden;
+        list-style: none;
+    }
+}
+
+.open {
+
+    .header-list {
+        
     }
 }
 
