--- a/starter-code/apps/scss/_globals.scss
+++ b/starter-code/apps/scss/_globals.scss
@@ -14,13 +14,16 @@ body {
     padding: 0;
     font-family: $heading-sm;
     color: #d0d6f9;
+    //height: fit-content;
 }
 
 .header {
     position: relative;
     padding: 1.5rem 1.5rem;
+    overflow-x: hidden;
 
     .hamburguer-btn {
+        z-index: 1;
 
         > span {
             display: block;
@@ -35,8 +38,8 @@ body {
             }
         }
 
-        &.open {
-        
+        &.open { 
+            // Hamburguer Menu
             > span:first-child {
                 transform: rotate(45deg);
             }
@@ -53,20 +56,49 @@ body {
 
     }
 
-    &-list {
-        z-index: 1;
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        list-style: none;
+    .background-header-list {
+        position: fixed;
+        right: 0;
+        top: 0;
+        transform: translateX(100%);
+        transition: 1s;
+        background-color: rgba(255, 255, 255, .1);
+        backdrop-filter: blur(28px);
+        height: 100vh;
+        width: 70vw;
+
+        .header-list {
+            display: flex;
+            flex-direction: column;
+            list-style: none;
+            margin: 8.5rem 2rem;
+            padding: 0;
+            gap: 2.125rem;
+            width: 100%;
+
+            &.-item, .link-list { // Links do Menu
+                font-size: 1rem;
+                font-weight: 400;
+                letter-spacing: 0.16875rem;
+                text-transform: uppercase;
+
+                .number {
+                    font-size: 1rem;
+                    font-weight: bolder;
+                    letter-spacing: 0.16875rem;
+                }
+
+            }
+        }
     }
 }
 
-.open {
+.open { // Header Links when it's open
 
-    .header-list {
-        
+    .background-header-list {
+        transform: translateX(0%);
     }
+
 }
 
 // Flexbox
