--- a/space-tourism/src/styles/_mixins.scss
+++ b/space-tourism/src/styles/_mixins.scss
@@ -1,7 +1,7 @@
 // Breakpoints
-@media (min-width: 64em){
+/*@media (min-width: 64em){
     //
-}
+}*/
 
 @mixin breakpoint-min($min-desktop){
     @media (min-width: $min-desktop){
