--- a/space-tourism/src/components/NavBar/NavBar.module.scss
+++ b/space-tourism/src/components/NavBar/NavBar.module.scss
@@ -1,12 +1,76 @@
 .NavContainer {
     display: flex;
 
-    .mainMenu {
-
+    .hamburgerButton {
+        z-index: 1;
     }
-    
-    .HeaderList {
-        display: flex;
-        flex-direction: row;
+
+    .mainMenu {
+        display: block;
+
+        @include breakpoint-max($max_mobile) {
+            position: fixed;
+            right: -500px;
+            top: 0;
+            transition: right 0.3s ease-in-out;
+            background-color: rgba(11, 13, 23, 0.15);
+            backdrop-filter: blur(10px);
+            height: 100vh;
+            width: 70%;
+
+            &.open {
+                right: 0;
+            }
+
+            .headerList {
+                position: relative;
+                top: 6rem;
+                display: flex;
+                flex-direction: column;
+                padding: 2rem 0 0 2rem;
+                gap: 2rem;
+            }
+
+            .headerListItem {
+                font-size: 1rem;
+                text-transform: uppercase;
+                display: inline-block;
+
+                .linkList {
+                    position: relative;
+                    display: block;
+                    font-weight: 400;
+                    font-family: $heading-sm;
+                    letter-spacing: 0.125rem;
+                    gap: 0.75rem;
+                    cursor: pointer;
+
+                    &::after {
+                        content: '';
+                        position: absolute;
+                        right: 0;
+                        top: 50%;
+                        width: 4px;
+                        height: 0;
+                        background-color: $white;
+                        transform: translateY(-50%);
+                        transition: height 0.3s ease;
+                    }
+
+                    &:hover::after {
+                        height: 100%;
+                    }
+
+                    .number {
+                        font-weight: bold;
+                        letter-spacing: 0.169rem;
+                    }
+                }
+            }
+        }
+
+        .headerList {
+            color: $white;
+        }
     }
 }
