--- a/space-tourism/src/styles/_variables.scss
+++ b/space-tourism/src/styles/_variables.scss
@@ -10,5 +10,7 @@ $ice: rgba(208, 214, 249, 1);
 $white: rgba(255, 255, 255, 1);
 
 // Typography
-$heading-big: 'Bellefair', serif;
+$heading-big: 'Bellefair Regular', serif;
+$heading-big-simple: 'Bellefair', serif;
 $heading-sm: 'Barlow Condensed', sans-serif;
+$heading-sm-simple: 'Barlow Regular', sans-serif;
