--- a/space-tourism/src/styles/main.scss
+++ b/space-tourism/src/styles/main.scss
@@ -3,41 +3,8 @@
 @use './reset' as *;
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed&family=Bellefair&display=swap');
 
-html {
-    font-size: 100%;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-}
-
-*, *::before, *::after {
-    box-sizing: inherit;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: $heading-sm;
-    color: #d0d6f9;
-}
-
-.header {
-    position: relative;
-    padding: 1.5rem 1.5rem;
-
-    &-list {
-        z-index: 1;
-        display: flex;
-        flex-direction: column;
-        position: absolute;
-        list-style: none;
-    }
-}
-
-.open {
-
-    .header-list {
-        
-    }
+html, body, #root {
+    height: 100%;
 }
 
 // Flexbox
@@ -60,8 +27,6 @@ body {
         align-items: center;
     }
 }
-
-// Visibility
 
 // Hide for mobile
 .hideForMobile {
