--- a/space-tourism/src/components/Header/Header.module.scss
+++ b/space-tourism/src/components/Header/Header.module.scss
@@ -3,4 +3,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include breakpoint-min-max($min-tablet, $max-tablet) {
+        padding: 0 0 0 2.5rem;
+    }
 }
