--- a/space-tourism/src/components/NavBar/NavBar.module.scss
+++ b/space-tourism/src/components/NavBar/NavBar.module.scss
@@ -7,16 +7,48 @@
 
     .mainMenu {
         display: block;
+        background-color: rgba(255, 255, 255, 0.04);
+        backdrop-filter: blur(10px);
+
+        @include breakpoint-min-max($min-tablet, $max-tablet) {
+            //padding: 2.969rem;
+
+            .headerList {
+                gap: 2.5rem;
+                padding: 2.25rem 3rem;
+
+                .headerListItem {
+                    font-size: 0.875rem;
+
+                    .linkList {
+                        letter-spacing: 0.148rem;
+                    }
+                }
+            }
+        }
+
+        .headerList {
+            color: $white;
+            display: flex;
+
+            .headerListItem {
+                text-transform: uppercase;
+
+                .linkList {
+                    font-family: $heading-sm;
+                    cursor: pointer;
+                }
+            }
+        }
 
         @include breakpoint-max($max_mobile) {
             position: fixed;
             right: -500px;
             top: 0;
             transition: right 0.3s ease-in-out;
-            background-color: rgba(11, 13, 23, 0.15);
-            backdrop-filter: blur(10px);
             height: 100vh;
             width: 70%;
+            background-color: rgba(11, 13, 23, 0.15);
 
             &.open {
                 right: 0;
@@ -33,17 +65,14 @@
 
             .headerListItem {
                 font-size: 1rem;
-                text-transform: uppercase;
                 display: inline-block;
 
                 .linkList {
                     position: relative;
                     display: block;
                     font-weight: 400;
-                    font-family: $heading-sm;
                     letter-spacing: 0.125rem;
-                    gap: 0.75rem;
-                    cursor: pointer;
+                    
 
                     &::after {
                         content: '';
@@ -69,8 +98,6 @@
             }
         }
 
-        .headerList {
-            color: $white;
-        }
+        
     }
 }
