--- a/space-tourism/src/components/Header/Header.module.scss
+++ b/space-tourism/src/components/Header/Header.module.scss
@@ -3,8 +3,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    gap: 1.063rem;
+
+    .divider {
+        flex: 1;
+        height: 1px;
+        background-color: rgba(255, 255, 255, 0.2515);
+    }
 
     @include breakpoint-min-max($min-tablet, $max-tablet) {
         padding: 0 0 0 2.5rem;
+    }
+
+    @include breakpoint-min($min-desktop) {
+        padding: 2.5rem 0 0 3.438rem;
     }
 }
