--- a/space-tourism/src/components/HomeMainSection/HomeMainSection.module.scss
+++ b/space-tourism/src/components/HomeMainSection/HomeMainSection.module.scss
@@ -1,14 +1,19 @@
 .mainSection {
-    flex-grow: 1;
-    padding: 1.5rem 1.5rem 0 1.5rem;
     text-align: center;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
+    //display: grid;
+    
+    @include breakpoint-max($max-mobile) {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 
     .textDiv {
         display: flex;
         flex-direction: column;
-        gap: 1.5rem;
+        gap: 1rem;
+        padding: 1.5rem;
 
         .callout {
             text-transform: uppercase;
@@ -41,6 +46,7 @@
 
     .buttonDiv {
         display: flex;
+        flex: 1;
         justify-content: center;
         align-items: center;
 
