HomeMainSection styles for tablet

--- a/space-tourism/src/styles/_variables.scss
+++ b/space-tourism/src/styles/_variables.scss
@@ -1,8 +1,8 @@
 // Screen sizes
-$min-desktop: 64.0625em; // 1025px
-$max-tablet: 64em; // 1024px
-$min-tablet: 39.875em; // 638px
-$max-mobile: 39.875em; // 637px
+$min-desktop: 1025px;
+$max-tablet: 1024px;
+$min-tablet: 638px;
+$max-mobile: 637px;
 
 // Colors
 $dark-blue: rgba(11, 13, 23, 1);
