--- a/space-tourism/src/components/HomeMainSection/HomeMainSection.module.scss
+++ b/space-tourism/src/components/HomeMainSection/HomeMainSection.module.scss
@@ -1,69 +1,128 @@
 .mainSection {
     text-align: center;
-    //display: grid;
-    
-    @include breakpoint-max($max-mobile) {
-        flex-grow: 1;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+
+    @include breakpoint-min-max($min-tablet, $max-tablet) {
+        justify-content: space-around;
+        padding: 2.5rem 9.938rem;
     }
 
     .textDiv {
         display: flex;
         flex-direction: column;
-        gap: 1rem;
-        padding: 1.5rem;
 
         .callout {
             text-transform: uppercase;
             color: $ice;
             font-family: $heading-sm;
-            font-weight: 400;
-            line-height: auto;
-            font-size: 1rem;
-            letter-spacing: 15%;
         }
 
         .title {
             text-transform: uppercase;
             font-family: $heading-big-simple;
-            font-weight: 400;
-            line-height: auto;
             color: $white;
-            font-size: 5rem;
-            letter-spacing: 0;
         }
 
         .text {
             font-family: 'Barlow', sans-serif;
             color: $ice;
-            font-size: 0.938rem;
-            letter-spacing: 0;
-            line-height: 180%;
         }
     }
 
     .buttonDiv {
         display: flex;
-        flex: 1;
         justify-content: center;
         align-items: center;
 
         .exploreButton {
-            font-family: $heading-big;
-            font-size: 1.125rem;
-            letter-spacing: 0;
+            font-family: $heading-big-simple;
             text-transform: uppercase;
             border-radius: 999px;
             background-color: $white;
             color: $dark-blue;
-            width: 144px;
-            height: 144px;
             transition: box-shadow .3s ease-in-out;
 
             &:hover {
                 box-shadow: 0 0 0 44px rgba(255, 255, 255, 0.1);
+            }
+        }
+    }
+
+    @include breakpoint-max($max-mobile) {
+        justify-content: space-between;
+
+        .textDiv {
+            gap: 1rem;
+            padding: 1.5rem;
+
+            .callout {
+                font-weight: 400;
+                line-height: auto;
+                font-size: 1rem;
+                letter-spacing: 15%;
+            }
+
+            .title {
+                font-weight: 400;
+                line-height: auto;
+                font-size: 5rem;
+                letter-spacing: 0;
+            }
+
+            .text {
+                font-size: 0.938rem;
+                letter-spacing: 0;
+                line-height: 180%;
+            }
+        }
+
+        .buttonDiv {
+            flex: 1;
+            .exploreButton {
+                font-size: 1.125rem;
+                letter-spacing: 0;
+                width: 144px;
+                height: 144px;
+            }
+        }
+    }
+
+    @include breakpoint-min-max($min-tablet, $max-tablet) {
+        //justify-content: space-around;
+
+        .textDiv {
+            gap: 1.5rem;
+            //margin: 9.938rem 6.625rem;
+
+            .callout {
+                font-weight: 400;
+                line-height: auto;
+                font-size: 1.25rem;
+                letter-spacing: 0.211rem;
+            }
+
+            .title {
+                font-weight: 400;
+                line-height: 150px;
+                font-size: 9.375rem;
+                letter-spacing: 0;
+            }
+
+            .text {
+                font-size: 1rem;
+                letter-spacing: 0;
+                line-height: 1.75rem;
+            }
+        }
+
+        .buttonDiv {
+            .exploreButton {
+                font-size: 2rem;
+                letter-spacing: 2px;
+                width: 242px;
+                height: 242px;
             }
         }
     }
