--- a/space-tourism/src/pages/HomePage/HomePage.module.scss
+++ b/space-tourism/src/pages/HomePage/HomePage.module.scss
@@ -1,23 +1,3 @@
 .HomePage {
-    background-color: $dark-blue;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    
-    @include breakpoint-max($max-mobile) {
-        background-image: url('../../assets/home/background-home-mobile.jpg');
-    }
-    
-    @include breakpoint-min-max($min-tablet, $max-tablet) {
-        background-image: url('../../assets/home/background-home-tablet.jpg');
-    }
-    
-    @include breakpoint-min($min-desktop) {
-        background-image: url('../../assets/home/background-home-desktop.jpg');
-    } 
-    
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-position: center;
+    @include page-background('home');
 }
