--- a/space-tourism/src/components/NavBar/NavBar.module.scss
+++ b/space-tourism/src/components/NavBar/NavBar.module.scss
@@ -57,6 +57,10 @@
                     font-family: $heading-sm;
                     cursor: pointer;
 
+                    .number {
+                        padding-right: 5px;
+                    }
+
                     &::after {
                         content: '';
                         position: absolute;
