--- a/space-tourism/src/components/NavBar/NavBar.module.scss
+++ b/space-tourism/src/components/NavBar/NavBar.module.scss
@@ -2,13 +2,14 @@
     display: flex;
 
     .hamburgerButton {
-        z-index: 1;
+        z-index: 2;
     }
 
     .mainMenu {
         display: block;
         background-color: rgba(255, 255, 255, 0.04);
         backdrop-filter: blur(10px);
+        z-index: 1;
 
         @include breakpoint-min-max($min-tablet, $max-tablet) {
             .headerList {
@@ -79,13 +80,18 @@
                             left: 50%;
                             width: 100%;
                             height: 3px;
+                            background-color: transparent;
                             transform: translateX(-50%) scaleX(0);
                             transform-origin: center;
                         }
 
-                        &:hover::after, 
-                        &.active::after {
+                        &:hover::after, &.active::after {
                             transform: translateX(-50%) scaleX(1);
+                            background-color: $white; // cor do hover
+                        }
+
+                        &.activeBlurred.active::after {
+                            background-color: rgba(255, 255, 255, .5);
                         }
                     }
                 }
@@ -131,9 +137,13 @@
                         transform: translateY(-50%);
                     }
 
-                    &:hover::after, 
-                    &.active::after {
+                    &:hover::after, &.active::after {
                         height: 100%;
+                        background-color: $white;
+                    }
+
+                    &.activeBlurred.active::after {
+                        background-color: rgba(255, 255, 255, .5);
                     }
                 }
             }
