Tabs logic created for DestinationCard

--- a/space-tourism/src/components/NavBar/NavBar.module.scss
+++ b/space-tourism/src/components/NavBar/NavBar.module.scss
@@ -87,7 +87,7 @@
 
                         &:hover::after, &.active::after {
                             transform: translateX(-50%) scaleX(1);
-                            background-color: $white; // cor do hover
+                            background-color: $white;
                         }
 
                         &.activeBlurred.active::after {
