--- a/space-tourism/src/components/DestinationCard/DestinationCard.module.scss
+++ b/space-tourism/src/components/DestinationCard/DestinationCard.module.scss
@@ -5,21 +5,46 @@
     align-items: center;
 
     .tabs {
+        @include flex-row;
+
         .tabButton {
+            padding: 0;
             text-transform: uppercase;
             font-family: $heading-sm;
             color: $ice;
             position: relative;
             display: inline-block;
 
-            /*&::after {
+            &::after {
                 content: '';
                 position:absolute;
-                background-color: $;
-            }*/
+                background-color: $white;
+                transition: all 0.3s ease;
+            }
 
             &.active {
                 color: $white;
+            }
+
+            @include breakpoint-min($min-tablet) {
+                &::after {
+                    bottom: -0.5rem;
+                    left: 50%;
+                    width: 100%;
+                    height: 3px;
+                    background-color: transparent;
+                    transform: translateX(-50%) scaleX(0);
+                    transform-origin: center;
+                }
+
+                &:hover::after, &.active::after {
+                    transform: translateX(-50%) scaleX(1);
+                    background-color: $white;
+                }
+
+                &.activeBlurred.active::after {
+                    background-color: rgba(255, 255, 255, .5);
+                }
             }
         }
     }
