--- a/space-tourism/src/components/NavBar/NavBar.module.scss
+++ b/space-tourism/src/components/NavBar/NavBar.module.scss
@@ -17,10 +17,11 @@
                 padding: 2.25rem 3rem;
 
                 .headerListItem {
-                    font-size: 0.875rem;
+                    font-size: 1rem;
+                    text-align: center;
 
                     .linkList {
-                        letter-spacing: 0.148rem;
+                        letter-spacing: 0.169rem;
                     }
                 }
             }
