--- a/space-tourism/src/pages/Destination/components/DestinationCard/Card.module.scss
+++ b/space-tourism/src/pages/Destination/components/DestinationCard/Card.module.scss
@@ -8,66 +8,42 @@
     }
     
     @include breakpoint-min($min-desktop) {
-        @include flex-row;
+        flex: 1;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
         gap: 2rem;
-    }
 
-    .tabs {
-        @include flex-row;
+        .planetImg {
+            padding: 0 47px;
+            display: flex;
+            justify-content: center;
+        }
 
-        .tabButton {
-            padding: 0;
-            text-transform: uppercase;
-            font-family: $heading-sm;
-            color: $ice;
-            position: relative;
-            display: inline-block;
-            transition: color 0.3s ease;
+        .planetInfo {
+            @include flex-column;
+            justify-content: center;
+            height: 100%;
+            gap: 40px;
+            padding: 0 47px;
+        }
 
-            &:hover {
-                color: $white;
-            }
+        .divider {
+            height: 2px;
+            width: 100%;
+            background-color: $white;
+            opacity: .25;
+        }
 
-            &::after {
-                content: '';
-                position:absolute;
-                background-color: $white;
-                transition: all 0.3s ease;
-            }
+        .detailsContainer {
+            display: flex;
+            gap: 24px;
+            justify-content: space-between;
 
-            &:hover::after, &.active::after {
-                background-color: $white;
-            }
-
-            &.activeBlurred.active::after {
-                background-color: rgba(255, 255, 255, .5);
-                
-            }
-
-            @include breakpoint-max($max-mobile) {
-
-            }
-
-            @include breakpoint-min($min-tablet) {
-                &::after {
-                    bottom: -0.5rem;
-                    left: 50%;
-                    width: 100%;
-                    height: 3px;
-                    background-color: transparent;
-                    transform: translateX(-50%) scaleX(0);
-                    transform-origin: center;
-                }
-
-                &:hover::after, &.active::after {
-                    transform: translateX(-50%) scaleX(1);
-                }
-            }
-
-            @include breakpoint-min($min-desktop) {
-                font-size: 1rem;
-                letter-spacing: 2px;
-                line-height: auto;
+            .detailedItem {
+                @include flex-column;
+                width: 100%;
+                gap: 12px;
             }
         }
     }
@@ -84,8 +60,8 @@
             }
 
             @include breakpoint-min($min-desktop) {
-                width: 480px;
-                height: 480px;
+                width: auto;
+                height: auto;
             }
         }
     }
@@ -138,7 +114,7 @@
             .planetDescription {
                 font-size: 1.125rem;
                 line-height: 180%;
-                letter-spacing: 0;
+                letter-spacing: 0px;
             }
 
             .detailsTitle {
