--- a/space-tourism/src/pages/Destination/components/TabsButton/TabsButton.module.scss
+++ b/space-tourism/src/pages/Destination/components/TabsButton/TabsButton.module.scss
@@ -37,7 +37,13 @@
     }
 
     @include breakpoint-min($min-tablet) {
+        justify-content: center;
+
         .tabButton {
+            font-size: 1rem;
+            letter-spacing: 2px;
+            line-height: auto;
+
             &::after {
                 bottom: -0.5rem;
                 left: 50%;
