--- a/space-tourism/src/pages/Destination/components/TabsButton/TabsButton.module.scss
+++ b/space-tourism/src/pages/Destination/components/TabsButton/TabsButton.module.scss
@@ -36,9 +36,12 @@
 
     }
 
-    @include breakpoint-min($min-tablet) {
+    @include breakpoint-min-max($min-tablet, $max-tablet) {
         justify-content: center;
+        gap: 2rem;
+    }
 
+    @include breakpoint-min($min-tablet) {
         .tabButton {
             font-size: 1rem;
             letter-spacing: 2px;
