--- a/space-tourism/src/pages/Destination/components/MainSection/MainSection.module.scss
+++ b/space-tourism/src/pages/Destination/components/MainSection/MainSection.module.scss
@@ -3,6 +3,8 @@
 
     @include breakpoint-max($max-mobile) {
         padding: 1.5rem;
+        @include flex-column;
+        gap: 1.5rem;
     }
 
     @include breakpoint-min-max($min-tablet, $max-tablet) {
@@ -38,7 +40,8 @@
                 gap: 1.125rem;
                 font-size: 1rem;
                 line-height: auto;
-                letter-spacing: 0.169rem;
+                letter-spacing: 15%;
+                justify-content: center;
             }
         }
     
