--- a/space-tourism/src/pages/Destination/components/TabsButton/TabsButton.module.scss
+++ b/space-tourism/src/pages/Destination/components/TabsButton/TabsButton.module.scss
@@ -1,5 +1,7 @@
 .tabs {
     @include flex-row;
+    gap: 2rem;
+
 
     .tabButton {
         padding: 0;
@@ -19,10 +21,18 @@
             position:absolute;
             background-color: $white;
             transition: all 0.3s ease;
+            bottom: -0.5rem;
+            left: 50%;
+            width: 100%;
+            height: 3px;
+            background-color: transparent;
+            transform: translateX(-50%) scaleX(0);
+            transform-origin: center;
         }
 
         &:hover::after, &.active::after {
             background-color: $white;
+            transform: translateX(-50%) scaleX(1);
         }
 
         &.activeBlurred.active::after {
@@ -33,12 +43,17 @@
     }
 
     @include breakpoint-max($max-mobile) {
-
+        justify-content: center;
+        
+        .tabButton {
+            font-size: 0.875rem;
+            letter-spacing: 15%;
+            line-height: auto;
+        }
     }
 
     @include breakpoint-min-max($min-tablet, $max-tablet) {
         justify-content: center;
-        gap: 2rem;
     }
 
     @include breakpoint-min($min-tablet) {
@@ -46,26 +61,10 @@
             font-size: 1rem;
             letter-spacing: 2px;
             line-height: auto;
-
-            &::after {
-                bottom: -0.5rem;
-                left: 50%;
-                width: 100%;
-                height: 3px;
-                background-color: transparent;
-                transform: translateX(-50%) scaleX(0);
-                transform-origin: center;
-            }
-    
-            &:hover::after, &.active::after {
-                transform: translateX(-50%) scaleX(1);
-            }
-
         }
     }
 
     @include breakpoint-min($min-desktop) {
-        gap: 2rem;
 
         .tabButton {
             font-size: 1rem;
