--- a/space-tourism/src/pages/Crew/Components/MainSection/MainSection.module.scss
+++ b/space-tourism/src/pages/Crew/Components/MainSection/MainSection.module.scss
@@ -8,10 +8,15 @@
     }
 
     @include breakpoint-min-max($min-tablet, $max-tablet) {
-
+        @include flex-column;
+        gap: 1.5rem;
+        padding: 2.5rem;
     }
 
     @include breakpoint-min($min-desktop) {
-
+        @include flex-column;
+        gap: 1.5rem;
+        padding: 3rem;
+        justify-content: space-between;
     }
 }
