--- a/space-tourism/src/pages/Technology/Components/MainSection/MainSection.module.scss
+++ b/space-tourism/src/pages/Technology/Components/MainSection/MainSection.module.scss
@@ -4,7 +4,7 @@
     @include breakpoint-max($max-mobile) {
         @include flex-column;
         gap: 1.5rem;
-        padding: 1.5rem;
+        //padding: 1.5rem;
     }
 
     @include breakpoint-min-max($min-tablet, $max-tablet) {
@@ -17,6 +17,5 @@
         @include flex-column;
         gap: 1.5rem;
         padding: 3rem;
-        //justify-content: space-between;
     }
 }
