--- a/space-tourism/src/pages/Technology/Components/TechCard/TechCard.module.scss
+++ b/space-tourism/src/pages/Technology/Components/TechCard/TechCard.module.scss
@@ -4,14 +4,23 @@
 
 .rankAndName {
     font-family: $heading-big-simple;
+    text-transform: uppercase;
 
     h1 {
-        color: rgba($color: $white, $alpha: 1.0)
+        color: rgba($color: $white, $alpha: 1.0);
+        font-weight: 400;
     }
 
     h2 {
-        color: rgba($color: $white, $alpha: .5)
+        color: rgba($color: $white, $alpha: .5);
+        font-weight: 400;
     }
+}
+
+.text {
+    font-family: $heading-sm;
+    color: $ice;
+    line-height: 180%;
 }
 
 .tabs {
@@ -20,7 +29,82 @@
 }
 
 .tabsButton {
-    background-color: $white;
+    color: $white;
+    font-family: $heading-big-simple;
+    background-color: transparent;
+    border: 1px solid rgba($color: $white, $alpha: .25);
     width: 15px;
     height: 15px;
+    border-radius: 30px;
+}
+
+@include breakpoint-max($max-mobile) {
+    .cardContainer {
+        @include flex-column;
+        gap: 32px;
+    }
+
+    .techInfo {
+        padding: 0 1.5rem;
+        order: 2;
+        text-align: center;
+        @include flex-column;
+        gap: 40px;
+
+        .explanation {
+            @include flex-column;
+            gap: 16px;
+        }
+
+        .rankAndName {
+            @include flex-column;
+            gap: 16px;
+
+            h2 {
+                font-size: 18px;
+            }
+
+            h1 {
+                font-size: 24px;
+            }
+        }
+
+        .text {
+            font-size: 15px;
+        }
+    }
+
+    .imageContainer {
+        order: 1;
+        padding-top: 64px;
+
+        .image {
+            min-height: 258px;
+        }
+    }
+
+    .tabs {
+        @include flex-row;
+        justify-content: center;
+        gap: 1rem;
+    }
+
+    .tabsButton {
+        width: 40px;
+        height: 40px;
+        font-size: 18px;
+
+        &.active {
+            color: $dark-blue;
+            background-color: $white;
+        }
+    }
+}
+
+@include breakpoint-min-max($min-tablet, $max-tablet) {
+    
+}
+
+@include breakpoint-min($min-desktop) {
+    
 }
