--- a/space-tourism/src/pages/Technology/Components/MainSection/MainSection.module.scss
+++ b/space-tourism/src/pages/Technology/Components/MainSection/MainSection.module.scss
@@ -11,12 +11,11 @@
         @include flex-column;
         gap: 1.5rem;
         padding: 2.5rem 0;
-
     }
 
     @include breakpoint-min($min-desktop) {
         @include flex-column;
         gap: 1.5rem;
-        padding: 3rem;
+        padding: 3rem 0 3rem 3rem;
     }
 }
