--- a/space-tourism/src/pages/HomePage/components/HomeMainSection/HomeMainSection.module.scss
+++ b/space-tourism/src/pages/HomePage/components/HomeMainSection/HomeMainSection.module.scss
@@ -1,173 +1,157 @@
 .mainSection {
-    text-align: center;
-    flex-grow: 1;
+  text-align: center;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+
+  .textDiv {
     display: flex;
     flex-direction: column;
-    height: 100%;
 
-    @include breakpoint-min-max($min-tablet, $max-tablet) {
-        justify-content: space-around;
-        padding: 2.5rem 4rem;
+    .callout {
+      text-transform: uppercase;
+      color: $ice;
+      font-family: $heading-sm;
+      font-weight: 400;
+      line-height: auto;
+      letter-spacing: 0;
     }
 
-    @include breakpoint-min($min-desktop) {
-        text-align: start;
-        flex-direction: row;
-        padding: 0 0 131px 0;
-        align-items: end;
-        justify-content: space-around;
+    .title {
+      text-transform: uppercase;
+      font-family: $heading-big-simple;
+      color: $white;
+      font-weight: 400;
+      line-height: auto;
+      letter-spacing: 0;
     }
+
+    .text {
+      font-family: 'Barlow', sans-serif;
+      color: $ice;
+      letter-spacing: 0;
+    }
+  }
+
+  .buttonDiv {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .exploreButton {
+      font-family: $heading-big-simple;
+      text-transform: uppercase;
+      border-radius: 999px;
+      background-color: $white;
+      color: $dark-blue;
+      transition: box-shadow 0.3s ease-in-out;
+
+      &:hover {
+        box-shadow: 0 0 0 50px rgba(255, 255, 255, 0.1);
+      }
+    }
+  }
+
+  @include breakpoint-max($max-mobile) {
+    justify-content: space-between;
 
     .textDiv {
-        display: flex;
-        flex-direction: column;
+      gap: 1rem;
+      padding: 1.5rem;
 
-        .callout {
-            text-transform: uppercase;
-            color: $ice;
-            font-family: $heading-sm;
-        }
+      .callout {
+        font-size: 1rem;
+        letter-spacing: 15%;
+      }
 
-        .title {
-            text-transform: uppercase;
-            font-family: $heading-big-simple;
-            color: $white;
-        }
+      .title {
+        font-size: 5rem;
+      }
 
-        .text {
-            font-family: 'Barlow', sans-serif;
-            color: $ice;
-        }
+      .text {
+        font-size: 0.938rem;
+        line-height: 180%;
+      }
     }
 
     .buttonDiv {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+      flex: 1;
 
-        .exploreButton {
-            font-family: $heading-big-simple;
-            text-transform: uppercase;
-            border-radius: 999px;
-            background-color: $white;
-            color: $dark-blue;
-            transition: box-shadow .3s ease-in-out;
+      .exploreButton {
+        font-size: 1.125rem;
+        width: 144px;
+        height: 144px;
+      }
+    }
+  }
 
-            &:hover {
-                box-shadow: 0 0 0 50px rgba(255, 255, 255, 0.1);
-            }
-        }
+  @include breakpoint-min-max($min-tablet, $max-tablet) {
+    justify-content: space-around;
+    padding: 2.5rem 4rem;
+
+    .textDiv {
+      gap: 1.5rem;
+
+      .callout {
+        font-size: 1.25rem;
+        letter-spacing: 0.211rem;
+      }
+
+      .title {
+        font-size: 9.375rem;
+        line-height: 150px;
+      }
+
+      .text {
+        font-size: 1rem;
+        line-height: 1.75rem;
+      }
     }
 
-    @include breakpoint-max($max-mobile) {
-        justify-content: space-between;
+    .buttonDiv {
+      .exploreButton {
+        font-size: 2rem;
+        letter-spacing: 2px;
+        width: 242px;
+        height: 242px;
+      }
+    }
+  }
 
-        .textDiv {
-            gap: 1rem;
-            padding: 1.5rem;
+  @include breakpoint-min($min-desktop) {
+    text-align: start;
+    flex-direction: row;
+    padding: 0 0 131px 0;
+    align-items: end;
+    justify-content: space-around;
 
-            .callout {
-                font-weight: 400;
-                line-height: auto;
-                font-size: 1rem;
-                letter-spacing: 15%;
-            }
+    .textDiv {
+      width: 450px;
+      gap: 1.5rem;
 
-            .title {
-                font-weight: 400;
-                line-height: auto;
-                font-size: 5rem;
-                letter-spacing: 0;
-            }
+      .callout {
+        font-size: 1.75rem;
+        letter-spacing: 0.295rem;
+      }
 
-            .text {
-                font-size: 0.938rem;
-                letter-spacing: 0;
-                line-height: 180%;
-            }
-        }
+      .title {
+        font-size: 9.375rem;
+      }
 
-        .buttonDiv {
-            flex: 1;
-            .exploreButton {
-                font-size: 1.125rem;
-                letter-spacing: 0;
-                width: 144px;
-                height: 144px;
-            }
-        }
+      .text {
+        font-size: 1.125rem;
+        line-height: 2rem;
+      }
     }
 
-    @include breakpoint-min-max($min-tablet, $max-tablet) {
-        .textDiv {
-            gap: 1.5rem;
-
-            .callout {
-                font-weight: 400;
-                line-height: auto;
-                font-size: 1.25rem;
-                letter-spacing: 0.211rem;
-            }
-
-            .title {
-                font-weight: 400;
-                line-height: 150px;
-                font-size: 9.375rem;
-                letter-spacing: 0;
-            }
-
-            .text {
-                font-size: 1rem;
-                letter-spacing: 0;
-                line-height: 1.75rem;
-            }
-        }
-
-        .buttonDiv {
-            .exploreButton {
-                font-size: 2rem;
-                letter-spacing: 2px;
-                width: 242px;
-                height: 242px;
-            }
-        }
+    .buttonDiv {
+      .exploreButton {
+        font-size: 2rem;
+        letter-spacing: 0.125rem;
+        width: 274px;
+        height: 274px;
+      }
     }
-
-    @include breakpoint-min($min-desktop) {
-        //justify-content: flex-end;
-
-        .textDiv {
-            width: 450px;
-            gap: 1.5rem;
-
-            .callout {
-                font-weight: 400;
-                line-height: auto;
-                font-size: 1.75rem;
-                letter-spacing: 0.295rem;
-            }
-
-            .title {
-                font-weight: 400;
-                line-height: auto;
-                font-size: 9.375rem;
-                letter-spacing: 0;
-            }
-
-            .text {
-                font-size: 1.125rem;
-                letter-spacing: 0;
-                line-height: 2rem;
-            }
-        }
-
-        .buttonDiv {
-            .exploreButton {
-                font-size: 2rem;
-                letter-spacing: 0.125rem;
-                width: 274px;
-                height: 274px;
-            }
-        }
-    }
+  }
 }
